# soapbox

./: .gitignore  .woodpecker.yaml  CRUSH.md  LICENSE
.helix/: languages.toml
soapbox/: .env.example  .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
soapbox-rs/: Cargo.toml  Dockerfile  README.md  bacon.toml  config.toml  justfile
soapbox-rs/frontend/: package.json  pnpm-lock.yaml
soapbox-rs/frontend/src/: index.html  index.js
soapbox-rs/src/: cli_level_filter.rs  error.rs  main.rs
soapbox/app/: globals.css  layout.tsx  page.tsx
soapbox/app/auth/login/: page.tsx
soapbox/components/: auth-button.tsx  login-form.tsx  sign-up-form.tsx
soapbox/components/ui/: card.tsx
soapbox/lib/: likeActions.ts
soapbox/src/: proxy.ts
soapbox/src/app/: globals.css  layout.tsx  page.tsx  unauthorized.tsx
soapbox/src/app/(pages)/: styles.module.css
soapbox/src/app/components/: auth-button.tsx  database-types.tsx  delete-thought-button.tsx  edit-profile.tsx  follow-button.tsx  forgot-password-form.tsx  like-button.tsx  loading.tsx  login-form.tsx  loginButton.tsx  logout-button.tsx  logoutButton.tsx  navbar.tsx  providers.tsx  reply-box.tsx  reply-card.tsx  searchable-thoughts-table.tsx  sign-up-form.tsx  (+8 more)
supabase/: config.toml  types.ts
supabase/migrations/: 20251118190830_post_revisions.sql  20251118191351_post_interactions.sql  20251119020352_posts.sql  20251203234642_initial.sql  20251208172658_week_5.sql  20251209195822_week_5_2.sql  20251210013139_follows.sql  20251210015322_follows_rls.sql
(+70 files in other folders)
