[package]
name = "pro150"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
color-eyre = "0.6.5"
jiff = { version = "0.2.16", features = ["serde"] }
postgrest = { git = "https://github.com/supabase-community/postgrest-rs", version = "1.6.0" }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
supabase-auth = { version = "0.10.14", features = ["use-rustls"] }
supports-color = "3.0.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
toml = { version = "0.9.8", features = ["serde"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["catch-panic", "cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde"] }
vy = { git = "https://github.com/jonahlund/vy", version = "0.2.0" }
